@@ -6,6 +6,10 @@
 	from Patrick Welche (all scripts moved in the 'config' and 'm4'
 	directories).
 
+2005-09-12  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_open.c: reintroduce seek to avoid problem on solaris.
+
 2005-09-05  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_dir.c: When prefreeing tv->value in TIFFSetFieldV
